--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "development": "nodemon"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
