--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A skeleton application that encapsulates rudimentary features and a workflow repeated by most MERN applications",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "nyc mocha test/**/*.test.js",
     "start": "nodemon"
   },
   "repository": {
@@ -30,7 +30,11 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-node-externals": "^1.7.2"
