--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,8 @@ language: node_js
 node_js:
   - "stable"
 services: mongodb
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
 
 script:
   - nyc mocha  "test/**/*.test.js"
 
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+after_success: npm run coverage
