--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ services: mongodb
 
 script:
   - nyc mocha  "test/**/*.test.js"
+  - npm run coverage
 
-after_success: npm run coverage
+after_success: npm run coveralls
