--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "nyc mocha test/**/*.test.js",
     "coverage": "nyc report --reporter=lcov --reporter=text",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "start": "nodemon",
     "lint": "eslint ."
   },
